--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Simple Canvas Game</title>
-        <style>
-            body { background: #ddd; }
-            #gameCanvas { background: #fff; }
-            #inputForm {
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-                background: #ccc;
-                padding: 10px;
-            }
-        </style>
-    </head>
-    <body>
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
-        <div id="inputForm" style="display: none;">
-            <form id="form">
-                <label for="input">Enter command:</label>
-                <input type="text" id="input" name="input" required>
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-        <script src="js/gameboard.js"></script>
-    </body>
+<html lang="en">
+<link>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>~*~PLANET~*~HOPPER~*~</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Oswald:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css"></link>
+</head>
+
+<body>
+  <header>
+    <h1>Planet Hopper!</h1>
+  </header>
+  <div id="gameBoard">
+    <div id="canvasContain">
+      <canvas id="gameCanvas" width="800" height="600"></canvas>
+      <div id="inventoryContainer"></div>
+    </div>
+  </div>
+    <div id="inputForm">
+      <form id="form">
+        <label for="input">Enter command:</label>
+        <input type="text" id="input" name="input" required>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+
+    <script src="js/gameboard.js"></script>
+</body>
 </html>
