background map layer

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Simple Canvas Game</title>
+        <title>Planet Hopper</title>
         <style>
             body { background: #ddd; }
             #gameCanvas { background: #fff; }
