centered sprite and changed map positioning

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,19 @@
     <head>
         <title>Planet Hopper</title>
         <style>
-            body { background: #ddd; }
-            #gameCanvas { background: #fff; }
+            body { background: #171616; }
+            #gameCanvas { background: #0a0000; }
             #inputForm {
                 position: fixed;
                 bottom: 0;
                 width: 100%;
-                background: #ccc;
+                background: #ece9e9;
                 padding: 10px;
             }
         </style>
     </head>
     <body>
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <canvas id="gameCanvas"></canvas>
         <div id="inputForm" style="display: none;">
             <form id="form">
                 <label for="input">Enter command:</label>
