--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,18 @@
     <div id="canvasContain">
       <canvas id="gameCanvas" width="800" height="600"></canvas>
       <div id="inventoryContainer"></div>
+      <div id="interactionContainer">
+          <div id="userInputContainer">
+              <p>User Input</p>
+          </div>
+          <div id="dialogueContainer">
+              <p>Dialogue</p>
+          </div>
+          <div id="npcHeadshotContainer">
+          </div>            
+      </div>  
     </div>
   </div>
-  <div id="interactionContainer" style="position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; display: none; background: rgba(255,255,255,0.7); flex-direction: row; justify-content: flex-end; align-items: flex-end;">
-      <div id="userInputContainer" style="width: 33%; height: 33%; border-width: 3px 0 3px 3px; border-style: dashed; border-color: black">
-          <p>User Input</p>
-      </div>
-      <div id="dialogueContainer" style="width: 33%; height: 33%; border-width: 3px 3px 3px 0; border-style: dashed; border-color: black">
-          <p>Dialogue</p>
-      </div>
-      <div id="npcHeadshotContainer" style="width: 33%; height: 33%; border-width: 3px; border-style: dashed; border-color: black; background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; background-size: cover;">
-      </div>            
-  </div>  
 
     <script src="js/gameboard.js"></script>
     <script src="js/gameboard.js"></script>
