collision block position detected

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
-        <scripts src="js/collisions.js"></scripts>
+        <script src="js/collisions1.js"></script>
         <script src="js/gameboard.js"></script>
     </body>
 </html>
