--- a/public/index.html
+++ b/public/index.html
@@ -21,19 +21,24 @@
       <div id="inventoryContainer"></div>
       <div id="interactionContainer">
           <div id="userInputContainer">
-              <p>User Input</p>
           </div>
           <div id="dialogueContainer">
-              <p>Dialogue</p>
+              <ul id="dialogueUl"></ul>
           </div>
-          <div id="npcHeadshotContainer">
+          <div id="npcDetailsContainer">
+            <div id="npcNameContainer">
+              <h2>NPC Name</h2>
+            </div>
+            <div id="npcHeadshotContainer"></div>
+            <div id="npcBioContainer">
+              <p>Bio</p>
+            </div>
           </div>            
       </div>  
     </div>
   </div>
-
-    <script src="js/gameboard.js"></script>
-    <script src="js/gameboard.js"></script>
-    <script src="js/inputMenu.js"></script>
+    <script type="module" src="js/gameboard.js"></script>
+    <script type="module" src="js/inputMenu.js"></script>
+    <script type="module" src="js/ai.js"></script>
 </body>
 </html>
