--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
                 </div>            
             </div>            
         </div>
+        <script src="js/classes.js"></script>
         <script src="js/collisions1.js"></script>
         <script src="js/gameboard.js"></script>
         <script src="js/inputMenu.js"></script>
