edited interactionContainer (input is above dialogue); dialogue lines are added to a list then appendedto the ul. chatinput box clears and stuff is added to it each time you press enter. Wrote sudocode for gathering data of the interaction object when spacebar is pressed.

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,13 @@
       <canvas id="gameCanvas" width="800" height="600"></canvas>
       <div id="inventoryContainer"></div>
       <div id="interactionContainer">
-          <div id="userInputContainer">
-          </div>
+          <div id="userInputAndDialogueContainer">
+            <div id='userInputContainer'></div>
           <div id="dialogueContainer">
               <ul id="dialogueUl"></ul>
           </div>
+        </div>
+
           <div id="npcDetailsContainer">
             <div id="npcNameContainer">
               <h2>NPC Name</h2>
