--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Planet Hopper</title>
-        <style>
-            body { background: #171616; }
-            #gameCanvas { background: #0a0000; }
-            #inputForm {
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-                background: #ece9e9;
-                padding: 10px;
-            }
-        </style>
-    </head>
-    <body>
+
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>"
+    <title>Planet Hopper</title>
+    <style>
+        body {
+            background: #171616;
+        }
+
+        #gameCanvas {
+            background: #0a0000;
+        }
+
+        #inputForm {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: #ece9e9;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="parentDiv" style="position: relative;">
+       
+        <img id="myImage" src="./images/introImage1.png" style=" background-color: black; position: absolute; display: inline-block; top: 0; right: 0;bottom: 0; left: 0; opacity: 0.0; pointer-events: none;"">
         <canvas id="gameCanvas"></canvas>
-    
+
         <div id="container" style="position: relative; width: 100%; height: 100vh;">
             <canvas id="gameCanvas" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></canvas>
-            <div id="interactionContainer" style="position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; display: none; background: rgba(255,255,255,0.7); flex-direction: row; justify-content: flex-end; align-items: flex-end;">
-                <div id="userInputContainer" style="width: 33%; height: 33%; border-width: 3px 0 3px 3px; border-style: dashed; border-color: black">
-                    <p>User Input</p>
+            <div id="overlapping">
+                <div id="interactionContainer"
+                    style="position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; display: none; background: rgba(255,255,255,0.7); flex-direction: row; justify-content: flex-end; align-items: flex-end;">
+                    <div id="userInputContainer"
+                        style="width: 33%; height: 33%; border-width: 3px 0 3px 3px; border-style: dashed; border-color: black">
+                        <p>User Input</p>
+                    </div>
+                    <div id="dialogueContainer"
+                        style="width: 33%; height: 33%; border-width: 3px 3px 3px 0; border-style: dashed; border-color: black">
+                        <p>Dialogue</p>
+                    </div>
+                    <div id="npcHeadshotContainer"
+                        style="width: 33%; height: 33%; border-width: 3px; border-style: dashed; border-color: black; background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; background-size: cover;">
+                    </div>
                 </div>
-                <div id="dialogueContainer" style="width: 33%; height: 33%; border-width: 3px 3px 3px 0; border-style: dashed; border-color: black">
-                    <p>Dialogue</p>
-                </div>
-                <div id="npcHeadshotContainer" style="width: 33%; height: 33%; border-width: 3px; border-style: dashed; border-color: black; background: url('https://tinyurl.com/f64x4z2h') no-repeat center center; background-size: cover;">
-                </div>            
-            </div>            
+            </div>
         </div>
-        <script src="js/classes.js"></script>
-        <script src="js/collisions1.js"></script>
-        <script src="js/gameboard.js"></script>
-        <script src="js/inputMenu.js"></script>
-        <script src="../src/ai.js" type="module"></script>
-    </body>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>"
+    <script src="js/interactionZones.js"></script>
+    <script src="js/classes.js"></script>
+    <script src="js/collisions1.js"></script>
+    <script src="js/gameboard.js"></script>
+    <script src="js/inputMenu.js"></script>
+    <script src="../src/ai.js" type="module"></script>
+</body>
+
 </html>
