--- a/public/game.html
+++ b/public/game.html
@@ -18,7 +18,7 @@
   <div id="gameBoard">
     <div id="canvasContain">
       <canvas id="gameCanvas" width="800" height="600"></canvas>
-      <div id="inventoryContainer"></div>
+      <!-- <div id="inventoryContainer"></div> -->
       <div id="interactionContainer">
           <div id="userInputAndDialogueContainer">
             <div id='userInputContainer'></div>
