populated npcDetails container with imageplaceholder and actual name and bio. Created function to make request object for chat prompt

--- a/public/game.html
+++ b/public/game.html
@@ -29,11 +29,11 @@
 
           <div id="npcDetailsContainer">
             <div id="npcNameContainer">
-              <h2>NPC Name</h2>
+              <h2 id="npcName"></h2>
             </div>
-            <div id="npcHeadshotContainer"></div>
+            <div id="npcHeadshotContainer">
+            </div>
             <div id="npcBioContainer">
-              <p>Bio</p>
             </div>
           </div>            
       </div>  
@@ -46,8 +46,7 @@
 <script src="js/classes.js"></script>
 <script src="js/collisions1.js"></script>
 <script src="js/gameboard.js"></script>
-<script src="js/inputMenu.js"></script>
-    <script type="module" src="js/inputMenu.js"></script>
-    <script type="module" src="js/ai.js"></script>
+<script type="module" src="js/ai.js"></script>
+<script type="module" src="js/inputMenu.js"></script>
 </body>
 </html>
