UI on index.html, home.css

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,21 @@
     <link rel="stylesheet" href="./css/home.css"></link>
 </head>
 <body>
-    <h1>Planet Hopper</h1>
+    <header>
+        <h1>Planet Hopper</h1>
+    </header>
     <div id="handheldNintendoContainer">
-        <img id="handheldNintendo" src="../images/handheldNintendo.png">
-        <a href="/game">
-            <button id="startGame">Start</button>
+
+        <!-- <img id="handheldNintendo" src="../images/handheldNintendo.png"> -->
+
+        <!-- handheldNintendo image is now housed in handheldNintendoContainer as its background-image -->
+
+        <a id="startGame" href="/game">
         </a>
-        <a href="/info">
-            <button id="info">Info</button>
+
+        <a id="info" href="/info">
         </a>
+
     </div>
   </div>
 </body>
