start game and end game functions working

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         <!-- <img id="handheldNintendo" src="../images/handheldNintendo.png"> -->
 
         <!-- handheldNintendo image is now housed in handheldNintendoContainer as its background-image -->
-
-        <a id="startGame" onclick= "animateTheIntroZoom()" href="/game">
+        <!-- <a id="startGame" onclick= "animateTheIntroZoom()" href="/game"> -->
+        <a id="startGame" onclick= "animateTheIntroZoom()">
         </a>
 
         <a id="info" href="/info">
