--- a/public/game.html
+++ b/public/game.html
@@ -18,6 +18,15 @@
   <div id="gameBoard">
     <div id="canvasContain">
       <canvas id="gameCanvas" width="800" height="600"></canvas>
+      <div class="image-container">
+        <img src="./images/spaceForEnding.png" alt="Image 1">
+      </div>
+    
+      <div class="image-container">
+        <img src="./images/BarfForEnding.png" alt="Image 2">
+      </div>
+    
+
       <!-- <div id="inventoryContainer"></div> -->
       <div id="interactionContainer">
           <div id="userInputAndDialogueContainer">
@@ -42,7 +51,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
   integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>"
-<script src="js/interactionZones.js"></script>
+<script src="js/interactionsZones2.js"></script>
 <script src="js/classes.js"></script>
 <script src="js/collisions1.js"></script>
 <script src="js/gameboard.js"></script>
