styled NPC interactions

--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
   <title>Login</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Oswald:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/jass.css"></link>
   <link rel="stylesheet" href="./css/login.css"></link>
 </head>
