--- a/public/game.html
+++ b/public/game.html
@@ -7,13 +7,13 @@
   <title>~*~PLANET~*~HOPPER~*~</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Oswald:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css"></link>
 </head>
 
 <body>
   <header>
-    <h1>Planet Hopper!</h1>
+    <h1>Planet Hopper</h1>
   </header>
   <div id="gameBoard">
     <div id="canvasContain">
