--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <header>
         <h1>Planet Hopper</h1>
     </header>
+    <<div id="loginButton">
+        <button onclick="location.href='./login.html'">Login</button>
+      </div>
     <div id="handheldNintendoContainer">
 
 
